# govtech-hackathon-flask

./: .gitignore  Dockerfile  FaceCropper.py  ReadMe.md  app.py  pyproject.toml  requirements.txt  s3_api.py
.github/workflows/: deploytoContainerWebApp.yml  master_passport-cropper.yml
helper/: helper.py
models/: AutoTransform.py  BackgroundRemover.py  Centralize.py  FaceCropper.py  SmileDetection.py  __init__.py  data_loader.py
models/base/: DetectorBaseClass.py  ModelBaseClass.py
templates/: compare.html  index.html  load_image.html
