[tool.poetry]
name = "govtech-hackathon-flask"
version = "0.1.0"
description = "A simple flask backend for govtech hackathon 2021"
authors = ["Gerald"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
boto3 = "^1.16.56"
Flask-Cors = "^3.0.10"
opencv-python = "^4.5.1"
dotenv = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
